[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/UnitDisplay.gd" type="Script" id=1]

[node name="UnitDisplay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -924.0
margin_bottom = -120.0
script = ExtResource( 1 )

[node name="UnitDisplayContainer" type="VBoxContainer" parent="."]
margin_right = 80.0
margin_bottom = 64.0

[node name="NameLabel" type="Label" parent="UnitDisplayContainer"]
margin_right = 80.0
margin_bottom = 14.0

[node name="MovementTextLabel" type="Label" parent="UnitDisplayContainer"]
margin_top = 18.0
margin_right = 80.0
margin_bottom = 32.0
text = "Movement"

[node name="MovementPointsLabel" type="Label" parent="UnitDisplayContainer"]
margin_top = 36.0
margin_right = 80.0
margin_bottom = 50.0

[node name="MovementBar" type="ColorRect" parent="UnitDisplayContainer"]
margin_top = 54.0
margin_right = 80.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 10 )
color = Color( 0.219608, 0.321569, 0.976471, 1 )

[node name="EndTurnButton" type="Button" parent="UnitDisplayContainer"]
margin_top = 68.0
margin_right = 80.0
margin_bottom = 88.0
text = "End Turn"

[connection signal="pressed" from="UnitDisplayContainer/EndTurnButton" to="." method="_on_EndTurnButton_pressed"]
